# tensor-concord-card-game

./: CMakeLists.txt  README.md  build.bat  main.cpp  makefile  tccg.hpp
include/: tccg.hpp
src/: ai.cpp  card.cpp  game.cpp  game.h  gamestate.cpp  gameui.cpp  gameui.h  main.cpp  minigames.cpp  minigames.h  synergy.cpp  tensor.cpp
